@@ -308,6 +308,7 @@ Contributors
 * Daniele Procida
 * Catherine Farman
 * Abdulmalik Abdulwahab
+* Andrew Crewdson
 
 Translators
 ===========
